# SimpleFeedforwardNeuralNetwork

./: CMakeLists.txt  README.md
include/neural/: typedefs.h
include/neural/layers/: layer.h  linear_layer.h  relu_layer.h
include/neural/loss/: squared_error_loss.h
include/neural/math/: matrix_math.h
src/: layer.cpp  linear_layer.cpp  matrix_math.cpp  relu_layer.cpp  squared_error_loss.cpp
tests/: linear_layer_test.cpp  main.cpp  matrix_math_test.cpp  relu_layer_test.cpp  squared_error_test.cpp
tools/feedforward_neural_net/: main.cpp
